--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,19 @@
 
 @use 'custom';
+
+// IMPORT THE COMPONENTS
+
+@use 'components/animations';
+@use 'components/buttons';
+@use 'components/mixins';
+@use 'components/typography';
+
+
+// IMPORT THE SECTIONS
+
+@use 'sections/navbar'
+@use 'sections/intro-section'
+@use 'sections/services'
+@use 'sections/testimonials'
+@use 'sections/portfolio'
+@use 'sections/footer'
