--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,9 +11,9 @@
 
 // IMPORT THE SECTIONS
 
-@use 'sections/navbar'
-@use 'sections/intro-section'
-@use 'sections/services'
-@use 'sections/testimonials'
-@use 'sections/portfolio'
-@use 'sections/footer'
+@use 'sections/navbar';
+@use 'sections/intro-section';
+@use 'sections/services';
+@use 'sections/testimonials';
+@use 'sections/portfolio';
+@use 'sections/footer';
