--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,7 @@
 // IMPORT THE SECTIONS
 
 @use 'sections/navbar';
+@use 'sections/campanies'; 
 @use 'sections/intro-section';
 @use 'sections/services';
 @use 'sections/testimonials';
