--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -9,7 +9,7 @@
     padding: 0.8375rem 4.375rem 0.8375rem 1.25rem;
     font-weight: 700;
     margin: 0;
-    border: 0.1rem solid rgba($white, 0.6);
+    border: 0.1rem solid rgba($gray-700, 0.6);
     background-color: $white;
     display: block;
 
