commit the Testimonials section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10942,4 +10942,50 @@ textarea.form-control-lg {
   max-width: 100%;
 }
 
+.testimonials {
+  position: relative;
+  padding: 0;
+  background: linear-gradient(to right, rgba(31, 23, 139, 0.95), rgba(57, 55, 66, 0.95));
+}
+* .testimonials__card {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 2rem 1.25rem;
+  border-radius: 0.625rem;
+  height: auto;
+  text-align: center;
+}
+* .testimonials__card i {
+  font-size: 1.5rem;
+  color: rgba(31, 23, 139, 0.7);
+}
+* .testimonials__card .ratings i {
+  color: rgba(31, 23, 139, 0.7);
+  font-size: 1rem;
+}
+.testimonials__picture {
+  width: 6rem;
+  height: 6rem;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.testimonials__picture img {
+  border: 0.325rem solid rgba(31, 23, 139, 0.7);
+}
+.testimonials__name {
+  padding-top: 3rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 0.8);
+}
+.testimonials__name h3 {
+  padding-top: 0.8rem;
+  text-transform: capitalize;
+}
+.testimonials__name p {
+  padding-bottom: 2rem;
+  text-transform: capitalize;
+}
+
 /*# sourceMappingURL=style.css.map */
