Commentaires en Français

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,5 +16,6 @@
 @use 'sections/intro-section';
 @use 'sections/services';
 @use 'sections/testimonials';
-@use 'sections/portfolio';
+
 @use 'sections/footer';
+@use 'sections/cv';
