--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10947,18 +10947,18 @@ textarea.form-control-lg {
   padding: 0;
   background: linear-gradient(to right, rgba(31, 23, 139, 0.95), rgba(57, 55, 66, 0.95));
 }
-* .testimonials__card {
+.testimonials__card {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 2rem 1.25rem;
   border-radius: 0.625rem;
   height: auto;
   text-align: center;
 }
-* .testimonials__card i {
+.testimonials__card i {
   font-size: 1.5rem;
   color: rgba(31, 23, 139, 0.7);
 }
-* .testimonials__card .ratings i {
+.testimonials__card .ratings i {
   color: rgba(31, 23, 139, 0.7);
   font-size: 1rem;
 }
@@ -10977,7 +10977,7 @@ textarea.form-control-lg {
   margin-bottom: 1rem;
   text-align: center;
   font-weight: 500;
-  color: rgba(255, 255, 255, 0.8);
+  color: #fff;
 }
 .testimonials__name h3 {
   padding-top: 0.8rem;
@@ -11076,6 +11076,10 @@ textarea.form-control-lg {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.cvcv__waves {
+  color: rgba(31, 23, 139, 0.8);
 }
 
 /*# sourceMappingURL=style.css.map */
