--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,6 @@
 @use 'sections/intro-section';
 @use 'sections/services';
 @use 'sections/testimonials';
-
+@use 'sections/card';
 @use 'sections/footer';
-@use 'sections/cv';
+
