commit all the index html mods

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11305,5 +11305,15 @@ textarea.form-control-lg {
     display: none;
   }
 }
+.grid > div {
+  border: solid 1px #ccc;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-column-gap: 5px;
+  grid-template-rows: 2fr 2fr;
+}
 
 /*# sourceMappingURL=style.css.map */
