--- a/scss/sections/_experience.scss
+++ b/scss/sections/_experience.scss
@@ -81,7 +81,6 @@
 .timeline-row .timeline-content h4 {
   margin: 0 0 20px 0;
   overflow: hidden;
-  white-space: nowrap;
   text-overflow: ellipsis;
   line-height: 150%;
 }
@@ -202,7 +201,17 @@
 
 .grid {
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-column-gap: 5px;
-  grid-template-rows: 2fr 2fr;
+  grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+  grid-column-gap: 10px;
 }
+
+.col > img {
+  max-width: 100%;
+  height: 100%;
+}
+
+.tab-photo {
+  max-width: 100%;
+  height: 100%;
+}
+
