--- a/scss/sections/_experience.scss
+++ b/scss/sections/_experience.scss
@@ -210,6 +210,12 @@
   height: 100%;
 }
 
+@media  screen and (max-width: 480px) {
+  .col > img {
+    max-height: 168px;
+  }
+}
+
 .tab-photo {
   max-width: 100%;
   height: 100%;
